# doreanreceipts

./: .gitignore  Makefile  README.md  index.html  manifest.json  printer.py  pyproject.toml  requirements.dev.txt
scripts/: index.js  scrape.js
src/doreanreceipts/: cli.py  receipts.py
src/doreanreceipts/cli/: __init__.py
