[build-system]
requires = ["setuptools==78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "doreanreceipts"
version = "0.1.0"
description = "Prints receipts for doreancon"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = "~=3.13.0"
authors = [
    { name = "James Orson", email = "jamesaorson@gmail.com" },
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# Configure setuptools to load dependencies from requirements.txt at build time.
dependencies = { file = "requirements.txt" }

[project.scripts]
doreanreceipts = "doreanreceipts.cli:main"
